Some changes to implement functionality
Add json_to-... functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Description: More about what it does (maybe more than one line).
 License: GPL (>= 2)
 Encoding: UTF-8
 RoxygenNote: 7.3.2
+Depends: 
+    openalexR (== 1.4.0)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
