--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,6 @@
 Package: openalexPro
 Type: Package
-Title: Providing a more advanced access to OpenAlex. It uses 'openalexR' for most of the hard work
-  but introdue=ces some new features useful for the power user.
+Title: Providing a more advanced access to OpenAlex for the power user
 Version: 0.3
 Date: 2024-09-19
 Author: Rainer M Krug
@@ -14,4 +13,9 @@ Depends:
     openalexR (== 1.4.0)
 Suggests: 
     testthat (>= 3.0.0)
+Imports:
+    duckdb,
+    DBI,
+    arrow,
+    tibble
 Config/testthat/edition: 3
