--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: openalexPro
 Type: Package
 Title: Providing a more advanced access to OpenAlex for the power user
-Version: 0.4.0.0
+Version: 0.5.0
 Date: 2024-09-19
 Author: Rainer M Krug
 Maintainer: Rainer M Krug <Rainer@krugs.de>
@@ -10,7 +10,7 @@ License: GPL (>= 2)
 Encoding: UTF-8
 RoxygenNote: 7.3.2
 Depends: 
-    openalexR (== 1.4.0)
+    openalexR (>= 1.4.0)
 Suggests: 
     testthat (>= 3.0.0)
 Imports:
@@ -18,7 +18,6 @@ Imports:
     DBI,
     dplyr,
     arrow,
-    tibble,
     RcppSimdJson,
     httr
 Config/testthat/edition: 3
