--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ RoxygenNote: 7.3.2
 Depends: 
     openalexR (>= 1.4.0)
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Imports:
     duckdb,
@@ -21,3 +23,4 @@ Imports:
     RcppSimdJson,
     httr
 Config/testthat/edition: 3
+VignetteBuilder: quarto
