--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,19 @@
 
 export(json_to_parquet)
 export(load_sql_file)
-export(oa_request)
+export(pro_request)
+export(pro_snowball)
 export(read_corpus)
+export(read_snowball)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbExecute)
 importFrom(arrow,open_dataset)
 importFrom(dplyr,collect)
+importFrom(dplyr,filter)
+importFrom(dplyr,select)
 importFrom(duckdb,duckdb)
 importFrom(openalexR,oa_apikey)
 importFrom(openalexR,oa_email)
-importFrom(openalexR,oa_fetch)
-importFrom(openalexR,oa_request)
-importFrom(openalexR,oa_snowball)
+importFrom(openalexR,oa_query)
 importFrom(utils,tail)
