--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(json_to_parquet)
 export(load_sql_file)
+export(oa_apikey)
+export(oa_email)
+export(oa_query)
 export(pro_request)
 export(pro_snowball)
 export(read_corpus)
@@ -17,4 +20,5 @@ importFrom(duckdb,duckdb)
 importFrom(openalexR,oa_apikey)
 importFrom(openalexR,oa_email)
 importFrom(openalexR,oa_query)
+importFrom(openalexR,oa_request)
 importFrom(utils,tail)
