--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Type: Package
 Package: openalexPro
 Title: Providing a more advanced access to OpenAlex for the power user
-Version: 0.6.0
+Version: 0.6.1
 Date: 2024-09-19
 Author: Rainer M Krug
 Maintainer: Rainer M Krug <Rainer@krugs.de>
 Description: More about what it does (maybe more than one line).
 License: GPL (>= 2)
+Depends:
+    R (>= 4.1.0)
 Imports:
     arrow,
     DBI,
