--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(pro_request)
 export(pro_snowball)
 export(read_corpus)
 export(read_snowball)
-export(snapshot_to_arrow)
+export(snapshot_to_parquet)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbExecute)
