--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(oa_apikey)
 export(oa_email)
 export(oa_query)
 export(pro_request)
+export(pro_request_json_to_parquet)
 export(pro_snowball)
 export(read_corpus)
 export(read_snowball)
