pro_request_httr2 implemented
Error handling still missing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,9 @@ export(normalize_parquet)
 export(oa_apikey)
 export(oa_email)
 export(oa_query)
-export(pro_request)
+export(pro_request_httr2)
 export(pro_request_json_to_parquet)
+export(pro_request_legacy)
 export(pro_snowball)
 export(read_corpus)
 export(read_snowball)
