Implemented pro_snowball and started with tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,21 @@
 export(enrich_corpus)
 export(filter_ids_from_snapshot)
 export(id_block)
+export(jq_execute)
+export(json_to_parquet)
 export(load_sql_file)
 export(normalize_parquet)
 export(oa_apikey)
 export(oa_email)
 export(oa_query)
-export(pro_request_httr2)
-export(pro_request_json_to_parquet)
+export(openalex_json_to_parquet)
+export(pro_request)
+export(pro_request_json_to_parquet_legacy)
 export(pro_request_legacy)
+export(pro_request_to_parquet)
 export(pro_snowball)
+export(pro_snowball_extract_edges)
+export(pro_snowball_get_nodes)
 export(read_corpus)
 export(read_snowball)
 export(snapshot_to_parquet)
@@ -20,16 +26,20 @@ importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbExecute)
 importFrom(arrow,open_dataset)
+importFrom(arrow,read_json_arrow)
+importFrom(arrow,write_parquet)
 importFrom(dplyr,collect)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(duckdb,duckdb)
+importFrom(duckdb,duckdb_register_arrow)
 importFrom(openalexR,oa_apikey)
 importFrom(openalexR,oa_email)
 importFrom(openalexR,oa_query)
 importFrom(openalexR,oa_request)
+importFrom(sys,exec_internal)
 importFrom(tibble,as_tibble)
 importFrom(tictoc,tic)
 importFrom(tictoc,toc)
