--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,12 +17,14 @@ Imports:
     httr,
     openalexR (>= 1.4.0),
     RcppSimdJson,
+    sys,
     tictoc
 Suggests: 
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
-Config/testthat/edition: 3
+SystemRequirements: jq (https://stedolan.github.io/jq/)Config/testthat/edition: 3
 Encoding: UTF-8
 RoxygenNote: 7.3.2
 VignetteBuilder: quarto
+Config/testthat/edition: 3
