--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(enrich_corpus)
 export(filter_ids_from_snapshot)
 export(id_block)
 export(jq_execute)
-export(json_to_parquet)
 export(load_sql_file)
 export(normalize_parquet)
 export(oa_apikey)
@@ -13,8 +12,9 @@ export(oa_query)
 export(openalex_json_to_parquet)
 export(pro_request)
 export(pro_request_json_to_parquet_legacy)
+export(pro_request_jsonl)
+export(pro_request_jsonl_parquet)
 export(pro_request_legacy)
-export(pro_request_to_parquet)
 export(pro_snowball)
 export(pro_snowball_extract_edges)
 export(pro_snowball_get_nodes)
@@ -26,7 +26,6 @@ importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbExecute)
 importFrom(arrow,open_dataset)
-importFrom(arrow,read_json_arrow)
 importFrom(arrow,write_parquet)
 importFrom(dplyr,collect)
 importFrom(dplyr,filter)
