Added plot_snowball and some test refinements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(oa_apikey)
 export(oa_email)
 export(oa_query)
 export(openalex_json_to_parquet)
+export(plot_snowball)
+export(plot_snowball_interactive)
 export(pro_request)
 export(pro_request_json_to_parquet_legacy)
 export(pro_request_jsonl)
@@ -25,21 +27,42 @@ export(source_to_parquet)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbExecute)
+importFrom(DT,JS)
 importFrom(arrow,open_dataset)
 importFrom(arrow,write_parquet)
 importFrom(dplyr,collect)
 importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(duckdb,duckdb)
 importFrom(duckdb,duckdb_register_arrow)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,ggsave)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_size)
+importFrom(ggplot2,theme)
+importFrom(ggraph,geom_edge_link)
+importFrom(ggraph,geom_node_label)
+importFrom(ggraph,geom_node_point)
+importFrom(ggraph,ggraph)
+importFrom(ggraph,scale_edge_width)
+importFrom(ggraph,theme_graph)
+importFrom(networkD3,forceNetwork)
 importFrom(openalexR,oa_apikey)
 importFrom(openalexR,oa_email)
 importFrom(openalexR,oa_query)
 importFrom(openalexR,oa_request)
+importFrom(rlang,sym)
 importFrom(sys,exec_internal)
 importFrom(tibble,as_tibble)
 importFrom(tictoc,tic)
 importFrom(tictoc,toc)
+importFrom(tidygraph,as_tbl_graph)
 importFrom(utils,tail)
