--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@
 vignettes/*.html
 vignettes/*.pdf
 
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+# OAuth2 token, see
 .httr-oauth
 
 # knitr and R markdown default cache directories
