Remove direct dependency of jsonlite and argument cleanup

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
     ggraph,
     httr, 
     httr2,
+    jqr,
     openalexR (>= 1.4.0), httr, 
     rlang,
     sys,
@@ -26,7 +27,6 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 3.0.0),
-    jsonlite,
     quarto,
     vdiffr
 SystemRequirements: jq (https://stedolan.github.io/jq/)Config/testthat/edition: 3
