--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
-Package: openalexPro
+Package: openalexPro2
 Title: Providing a more advanced access to OpenAlex for the power user
-Version: 0.7.99
+Version: 0.0.1
 Date: 2024-09-19
 Author: Rainer M Krug
 Maintainer: Rainer M Krug <Rainer@krugs.de>
