--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(openalexR,oa_request)
 importFrom(rlang,sym)
 importFrom(sys,exec_internal)
 importFrom(tidygraph,as_tbl_graph)
+importFrom(tidyselect,all_of)
 importFrom(utils,hasName)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
