--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,8 @@ importFrom(httr2,req_perform)
 importFrom(httr2,req_url_query)
 importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_body_string)
+importFrom(httr2,resp_status)
+importFrom(jsonlite,fromJSON)
 importFrom(openalexR,oa_apikey)
 importFrom(openalexR,oa_email)
 importFrom(openalexR,oa_query)
