Added mising imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,11 +53,13 @@ importFrom(openalexR,oa_apikey)
 importFrom(openalexR,oa_email)
 importFrom(openalexR,oa_query)
 importFrom(openalexR,oa_request)
+importFrom(rlang,caller_env)
 importFrom(rlang,sym)
 importFrom(sys,exec_internal)
 importFrom(tidygraph,as_tbl_graph)
 importFrom(tidyselect,all_of)
 importFrom(utils,hasName)
+importFrom(utils,packageVersion)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
