--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ importFrom(httr2,req_url_query)
 importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_body_string)
 importFrom(httr2,resp_status)
+importFrom(jqr,jq)
 importFrom(jsonlite,fromJSON)
 importFrom(openalexR,oa_apikey)
 importFrom(openalexR,oa_email)
@@ -55,7 +56,6 @@ importFrom(openalexR,oa_query)
 importFrom(openalexR,oa_request)
 importFrom(rlang,caller_env)
 importFrom(rlang,sym)
-importFrom(sys,exec_internal)
 importFrom(tidygraph,as_tbl_graph)
 importFrom(tidyselect,all_of)
 importFrom(utils,hasName)
