--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,11 @@ Type: Package
 Package: openalexPro2
 Title: Providing a more advanced access to OpenAlex for the power user
 Version: 0.0.2
-Date: 2024-09-19
 Author: Rainer M Krug
 Maintainer: Rainer M Krug <Rainer@krugs.de>
 Description: More about what it does (maybe more than one line).
+URL: https://github.com/rkrug/openalexPro
+BugReports: https://github.com/rkrug/openalexPro/issues
 License: GPL (>= 2)
 Depends:
     R (>= 4.1.0)
