--- a/tests/fixtures/vcr/pro_request_biodiversity_and_group_by_type.yml
+++ b/tests/fixtures/vcr/pro_request_biodiversity_and_group_by_type.yml
@@ -1,16 +1,16 @@
 http_interactions:
 - request:
     method: GET
-    uri: https://api.openalex.org/works?filter=title_and_abstract.search%3Abiodiversity%2Cto_publication_date%3A2010-01-01&group_by=type&per_page=200&cursor=%2A&mailto=test%40example.com&api_key=LfX3r2As7S6tJqcEhpTP6M
+    uri: https://api.openalex.org/works?filter=title_and_abstract.search%3Abiodiversity%2Cto_publication_date%3A2010-01-01&group_by=type&per_page=200&cursor=%2A&mailto=test%40example.com&api_key=<api-key>
   response:
     status: 200
     headers:
-      Report-To: '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1749558630&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=ulffJO44LPeKesLMcaVny9BA84N%2B1DuFd9byafaf4u0%3D"}]}'
-      Reporting-Endpoints: heroku-nel=https://nel.heroku.com/reports?ts=1749558630&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=ulffJO44LPeKesLMcaVny9BA84N%2B1DuFd9byafaf4u0%3D
+      Report-To: '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1749711005&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=CaC4KukpehbkaKMyKX2SOtB3hrhHMExl6g6gHhKpXP8%3D"}]}'
+      Reporting-Endpoints: heroku-nel=https://nel.heroku.com/reports?ts=1749711005&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=CaC4KukpehbkaKMyKX2SOtB3hrhHMExl6g6gHhKpXP8%3D
       Nel: '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection: keep-alive
       Server: gunicorn
-      Date: Tue, 10 Jun 2025 12:30:30 GMT
+      Date: Thu, 12 Jun 2025 06:50:05 GMT
       Content-Type: application/json
       Content-Length: '470'
       Access-Control-Allow-Origin: '*'
@@ -32,19 +32,19 @@ http_interactions:
     body:
       string: |
         {"meta":{"count":52211,"db_response_time_ms":135,"page":null,"per_page":200,"next_cursor":"InN0YW5kYXJkIg==","groups_count":17},"group_by":[{"key":"https://openalex.org/types/article","key_display_name":"article","count":41442},{"key":"https://openalex.org/types/book","key_display_name":"book","count":2223},{"key":"https://openalex.org/types/book-chapter","key_display_name":"book-chapter","count":3269},{"key":"https://openalex.org/types/dataset","key_display_name":"dataset","count":231},{"key":"https://openalex.org/types/dissertation","key_display_name":"dissertation","count":1426},{"key":"https://openalex.org/types/editorial","key_display_name":"editorial","count":144},{"key":"https://openalex.org/types/erratum","key_display_name":"erratum","count":42},{"key":"https://openalex.org/types/grant","key_display_name":"grant","count":24},{"key":"https://openalex.org/types/letter","key_display_name":"letter","count":218},{"key":"https://openalex.org/types/libguides","key_display_name":"libguides","count":22},{"key":"https://openalex.org/types/other","key_display_name":"other","count":345},{"key":"https://openalex.org/types/paratext","key_display_name":"paratext","count":102},{"key":"https://openalex.org/types/preprint","key_display_name":"preprint","count":1438},{"key":"https://openalex.org/types/reference-entry","key_display_name":"reference-entry","count":24},{"key":"https://openalex.org/types/report","key_display_name":"report","count":243},{"key":"https://openalex.org/types/review","key_display_name":"review","count":1017},{"key":"https://openalex.org/types/standard","key_display_name":"standard","count":1},{"key":"https://openalex.org/types/peer-review","key_display_name":"peer-review","count":0},{"key":"https://openalex.org/types/supplementary-materials","key_display_name":"supplementary-materials","count":0},{"key":"https://openalex.org/types/retraction","key_display_name":"retraction","count":0}]}
-  recorded_at: 2025-06-10 12:30:30
+  recorded_at: 2025-06-12 06:50:05
 - request:
     method: GET
-    uri: https://api.openalex.org/works?filter=title_and_abstract.search%3Abiodiversity%2Cto_publication_date%3A2010-01-01&group_by=type&per_page=200&cursor=%2A&mailto=test%40example.com&api_key=LfX3r2As7S6tJqcEhpTP6M
+    uri: https://api.openalex.org/works?filter=title_and_abstract.search%3Abiodiversity%2Cto_publication_date%3A2010-01-01&group_by=type&per_page=200&cursor=%2A&mailto=test%40example.com&api_key=<api-key>
   response:
     status: 200
     headers:
-      Report-To: '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1749558631&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Rtnud5IcCgdCMLti%2BopzT0u5u8M22HOoH4pAAKftekM%3D"}]}'
-      Reporting-Endpoints: heroku-nel=https://nel.heroku.com/reports?ts=1749558631&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Rtnud5IcCgdCMLti%2BopzT0u5u8M22HOoH4pAAKftekM%3D
+      Report-To: '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1749711005&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=CaC4KukpehbkaKMyKX2SOtB3hrhHMExl6g6gHhKpXP8%3D"}]}'
+      Reporting-Endpoints: heroku-nel=https://nel.heroku.com/reports?ts=1749711005&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=CaC4KukpehbkaKMyKX2SOtB3hrhHMExl6g6gHhKpXP8%3D
       Nel: '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection: keep-alive
       Server: gunicorn
-      Date: Tue, 10 Jun 2025 12:30:31 GMT
+      Date: Thu, 12 Jun 2025 06:50:05 GMT
       Content-Type: application/json
       Content-Length: '470'
       Access-Control-Allow-Origin: '*'
@@ -66,19 +66,19 @@ http_interactions:
     body:
       string: |
         {"meta":{"count":52211,"db_response_time_ms":135,"page":null,"per_page":200,"next_cursor":"InN0YW5kYXJkIg==","groups_count":17},"group_by":[{"key":"https://openalex.org/types/article","key_display_name":"article","count":41442},{"key":"https://openalex.org/types/book","key_display_name":"book","count":2223},{"key":"https://openalex.org/types/book-chapter","key_display_name":"book-chapter","count":3269},{"key":"https://openalex.org/types/dataset","key_display_name":"dataset","count":231},{"key":"https://openalex.org/types/dissertation","key_display_name":"dissertation","count":1426},{"key":"https://openalex.org/types/editorial","key_display_name":"editorial","count":144},{"key":"https://openalex.org/types/erratum","key_display_name":"erratum","count":42},{"key":"https://openalex.org/types/grant","key_display_name":"grant","count":24},{"key":"https://openalex.org/types/letter","key_display_name":"letter","count":218},{"key":"https://openalex.org/types/libguides","key_display_name":"libguides","count":22},{"key":"https://openalex.org/types/other","key_display_name":"other","count":345},{"key":"https://openalex.org/types/paratext","key_display_name":"paratext","count":102},{"key":"https://openalex.org/types/preprint","key_display_name":"preprint","count":1438},{"key":"https://openalex.org/types/reference-entry","key_display_name":"reference-entry","count":24},{"key":"https://openalex.org/types/report","key_display_name":"report","count":243},{"key":"https://openalex.org/types/review","key_display_name":"review","count":1017},{"key":"https://openalex.org/types/standard","key_display_name":"standard","count":1},{"key":"https://openalex.org/types/peer-review","key_display_name":"peer-review","count":0},{"key":"https://openalex.org/types/supplementary-materials","key_display_name":"supplementary-materials","count":0},{"key":"https://openalex.org/types/retraction","key_display_name":"retraction","count":0}]}
-  recorded_at: 2025-06-10 12:30:31
+  recorded_at: 2025-06-12 06:50:05
 - request:
     method: GET
-    uri: https://api.openalex.org/works?filter=title_and_abstract.search%3Abiodiversity%2Cto_publication_date%3A2010-01-01&group_by=type&per_page=200&mailto=test%40example.com&api_key=LfX3r2As7S6tJqcEhpTP6M&cursor=InN0YW5kYXJkIg%3D%3D
+    uri: https://api.openalex.org/works?filter=title_and_abstract.search%3Abiodiversity%2Cto_publication_date%3A2010-01-01&group_by=type&per_page=200&mailto=test%40example.com&api_key=<api-key>&cursor=InN0YW5kYXJkIg%3D%3D
   response:
     status: 200
     headers:
-      Report-To: '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1749558631&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Rtnud5IcCgdCMLti%2BopzT0u5u8M22HOoH4pAAKftekM%3D"}]}'
-      Reporting-Endpoints: heroku-nel=https://nel.heroku.com/reports?ts=1749558631&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Rtnud5IcCgdCMLti%2BopzT0u5u8M22HOoH4pAAKftekM%3D
+      Report-To: '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1749711006&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=IMnBWnR14y0zDxKjeoo7r5saZC%2BTOdjbH4Siva0UYro%3D"}]}'
+      Reporting-Endpoints: heroku-nel=https://nel.heroku.com/reports?ts=1749711006&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=IMnBWnR14y0zDxKjeoo7r5saZC%2BTOdjbH4Siva0UYro%3D
       Nel: '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection: keep-alive
       Server: gunicorn
-      Date: Tue, 10 Jun 2025 12:30:31 GMT
+      Date: Thu, 12 Jun 2025 06:50:06 GMT
       Content-Type: application/json
       Content-Length: '378'
       Access-Control-Allow-Origin: '*'
@@ -100,5 +100,5 @@ http_interactions:
     body:
       string: |
         {"meta":{"count":52211,"db_response_time_ms":156,"page":null,"per_page":200,"next_cursor":null,"groups_count":0},"group_by":[{"key":"https://openalex.org/types/article","key_display_name":"article","count":0},{"key":"https://openalex.org/types/book-chapter","key_display_name":"book-chapter","count":0},{"key":"https://openalex.org/types/dataset","key_display_name":"dataset","count":0},{"key":"https://openalex.org/types/preprint","key_display_name":"preprint","count":0},{"key":"https://openalex.org/types/dissertation","key_display_name":"dissertation","count":0},{"key":"https://openalex.org/types/book","key_display_name":"book","count":0},{"key":"https://openalex.org/types/review","key_display_name":"review","count":0},{"key":"https://openalex.org/types/paratext","key_display_name":"paratext","count":0},{"key":"https://openalex.org/types/libguides","key_display_name":"libguides","count":0},{"key":"https://openalex.org/types/letter","key_display_name":"letter","count":0},{"key":"https://openalex.org/types/other","key_display_name":"other","count":0},{"key":"https://openalex.org/types/reference-entry","key_display_name":"reference-entry","count":0},{"key":"https://openalex.org/types/report","key_display_name":"report","count":0},{"key":"https://openalex.org/types/editorial","key_display_name":"editorial","count":0},{"key":"https://openalex.org/types/peer-review","key_display_name":"peer-review","count":0},{"key":"https://openalex.org/types/erratum","key_display_name":"erratum","count":0},{"key":"https://openalex.org/types/standard","key_display_name":"standard","count":0},{"key":"https://openalex.org/types/grant","key_display_name":"grant","count":0},{"key":"https://openalex.org/types/supplementary-materials","key_display_name":"supplementary-materials","count":0},{"key":"https://openalex.org/types/retraction","key_display_name":"retraction","count":0}]}
-  recorded_at: 2025-06-10 12:30:31
+  recorded_at: 2025-06-12 06:50:06
 recorded_with: vcr/1.7.0.91, webmockr/2.0.0
