Replaced oa_query with own implememntation named pro_query

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(load_sql_file)
 export(normalize_parquet)
 export(oa_apikey)
 export(oa_email)
-export(oa_query)
+export(opt_filter_names)
+export(opt_select_fields)
 export(plot_snowball)
+export(pro_query)
 export(pro_request)
 export(pro_request_jsonl)
 export(pro_request_jsonl_parquet)
@@ -44,20 +46,24 @@ importFrom(ggraph,geom_node_point)
 importFrom(ggraph,ggraph)
 importFrom(ggraph,scale_edge_width)
 importFrom(ggraph,theme_graph)
+importFrom(httr2,req_error)
+importFrom(httr2,req_headers)
 importFrom(httr2,req_perform)
+importFrom(httr2,req_url_path_append)
 importFrom(httr2,req_url_query)
+importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_body_string)
 importFrom(httr2,resp_status)
 importFrom(jqr,jq)
 importFrom(openalexR,oa_apikey)
 importFrom(openalexR,oa_email)
-importFrom(openalexR,oa_query)
 importFrom(openalexR,oa_request)
 importFrom(rlang,caller_env)
 importFrom(rlang,sym)
 importFrom(tidygraph,as_tbl_graph)
 importFrom(tidyselect,all_of)
+importFrom(utils,adist)
 importFrom(utils,hasName)
 importFrom(utils,packageVersion)
 importFrom(utils,setTxtProgressBar)
