Some more cleaning up

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(extract_doi)
 export(jq_execute)
 export(load_sql_file)
 export(normalize_parquet)
-export(oa_apikey)
-export(oa_email)
+export(oap_apikey)
+export(oap_mail)
 export(opt_filter_names)
 export(opt_select_fields)
 export(plot_snowball)
@@ -56,8 +56,6 @@ importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_body_string)
 importFrom(httr2,resp_status)
 importFrom(jqr,jq)
-importFrom(openalexR,oa_apikey)
-importFrom(openalexR,oa_email)
 importFrom(openalexR,oa_request)
 importFrom(rlang,caller_env)
 importFrom(rlang,sym)
