--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: openalexPro2
 Title: Providing a more advanced access to OpenAlex for the power user
-Version: 0.0.3
+Version: 0.0.3.1
 Author: Rainer M Krug
 Maintainer: Rainer M Krug <Rainer@krugs.de>
 Description: More about what it does (maybe more than one line).
@@ -18,6 +18,7 @@ Imports:
     ggplot2,
     ggraph,
     httr2,
+    jsonlite,
     jqr,
     rlang,
     tidygraph,
