--- a/.gitignore
+++ b/.gitignore
@@ -35,12 +35,8 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 
-## test directories
-corpus*/
-inst/json_1000
-inst/json_10000
-corpus.parquet
-/snowball/
+## test directories (only at repo root)
+/corpus*/
 
 /.quarto/
 inst/tca_corpus_complete.plantuml
