Fix Parallel processing through pipeline and fix tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,10 @@ importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(duckdb,duckdb)
 importFrom(duckdb,duckdb_register_arrow)
+importFrom(future,multisession)
+importFrom(future,plan)
+importFrom(future,sequential)
+importFrom(future.apply,future_lapply)
 importFrom(httr2,req_error)
 importFrom(httr2,req_headers)
 importFrom(httr2,req_perform)
