--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_body_string)
 importFrom(httr2,resp_status)
 importFrom(jqr,jq)
+importFrom(rlang,.data)
+importFrom(rlang,.env)
 importFrom(rlang,caller_env)
 importFrom(utils,adist)
 importFrom(utils,packageVersion)
