--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Type: Package
-Package: openalexPro
+Package: openalexProLegacy
 Title: Providing a more advanced access to OpenAlex for the power user
 Version: 0.6.4
 Date: 2024-09-19
@@ -17,6 +17,7 @@ Imports:
     httr,
     openalexR (>= 1.4.0),
     RcppSimdJson,
+    tibble,
     tictoc
 Suggests: 
     knitr,
@@ -24,4 +25,4 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
