--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
-Package: openalexPro2
+Package: openalexPro
 Title: Providing a more advanced access to OpenAlex for the power user
-Version: 0.0.3.4
+Version: 0.1.0
 Author: Rainer M Krug
 Maintainer: Rainer M Krug <Rainer@krugs.de>
 Description: More about what it does (maybe more than one line).
