--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,15 +37,18 @@ importFrom(future.apply,future_lapply)
 importFrom(httr2,req_error)
 importFrom(httr2,req_headers)
 importFrom(httr2,req_perform)
+importFrom(httr2,req_retry)
 importFrom(httr2,req_url_path_append)
 importFrom(httr2,req_url_query)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_body_string)
+importFrom(httr2,resp_header)
 importFrom(httr2,resp_status)
 importFrom(jqr,jq)
 importFrom(rlang,.data)
 importFrom(rlang,.env)
+importFrom(rlang,abort)
 importFrom(rlang,caller_env)
 importFrom(utils,adist)
 importFrom(utils,packageVersion)
