Add `pro_fetch()` function nd fix tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(oap_apikey)
 export(oap_mail)
 export(opt_filter_names)
 export(opt_select_fields)
+export(pro_fetch)
 export(pro_query)
 export(pro_request)
 export(pro_request_jsonl)
