--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: openalexPro
 Title: Providing a more advanced access to OpenAlex for the power user
-Version: 0.3.1
+Version: 0.3.2
 Author: Rainer M Krug
 Maintainer: Rainer M Krug <Rainer@krugs.de>
 Description: More about what it does (maybe more than one line).
@@ -23,6 +23,7 @@ Imports:
 Additional_repositories: 
     https://ropensci.r-universe.dev
 Suggests: 
+    keyring,
     knitr,
     openalexR (>= 1.4.0),
     rmarkdown,
