Add Progress bar to harmonize and pro-request functions (not showing yet)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Imports:
     future.apply,
     httr2,
     jqr,
+    progressr,
     rlang
 Additional_repositories: 
     https://ropensci.r-universe.dev
