--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(compatibility_report)
 export(extract_doi)
+export(harmonize_parquet_schemata)
 export(jq_execute)
 export(load_sql_file)
 export(normalize_parquet)
@@ -22,13 +23,18 @@ export(read_snowball)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbExecute)
+importFrom(DBI,dbGetQuery)
+importFrom(DBI,dbQuoteIdentifier)
+importFrom(DBI,dbQuoteString)
 importFrom(arrow,open_dataset)
 importFrom(arrow,write_parquet)
 importFrom(dplyr,arrange)
 importFrom(dplyr,collect)
 importFrom(dplyr,desc)
 importFrom(dplyr,filter)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,select)
+importFrom(dplyr,transmute)
 importFrom(duckdb,duckdb)
 importFrom(duckdb,duckdb_register_arrow)
 importFrom(future,multisession)
@@ -47,6 +53,8 @@ importFrom(httr2,resp_body_string)
 importFrom(httr2,resp_header)
 importFrom(httr2,resp_status)
 importFrom(jqr,jq)
+importFrom(progressr,progressor)
+importFrom(progressr,with_progress)
 importFrom(rlang,.data)
 importFrom(rlang,.env)
 importFrom(rlang,abort)
